<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:contextClickable=".MainActivity">


<LinearLayout
    android:id="@+id/rlVar1"
    android:orientation="vertical"
    android:background="#b3b6b7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/app_name" />

    <ImageView
    android:id="@+id/imageView"
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    android:src="@drawable/imgg"
    android:background="@drawable/circle_background"
    android:scaleType="centerCrop"
    android:elevation="4dp" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        android:text="@string/piro"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/port" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:text="@string/experience"
        android:textColor="@color/purple_200"
        android:textSize="20dp"
        tools:ignore="VisualLineButtonSize" />

    <Button
        android:id="@+id/button2"
        android:layout_margin="15dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textSize="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/purple_200"
        android:text="@string/skills" />

    <Button
        android:id="@+id/button3"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_width="200dp"
        android:layout_margin="15dp"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/purple_200"
        android:text="@string/education" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_margin="15dp"
        android:textSize="20dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/purple_200"
        android:text="@string/contact_me" />


    <TextView
        android:id="@+id/textView12"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login Instead?" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dark_mode"
        android:textSize="16sp"/>




</LinearLayout>
    </RelativeLayout>